# n-link-pendulum

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  chain.h  compile_commands.json  generate_compile_commands.sh  main.cpp  pendulumplot.cpp  pendulumplot.py  pendulumsim.cpp
pendlib/: CMakeLists.txt  Pendlib.h  Pendulum.cpp  Pendulum.h
pendlib/src/: Computation.cpp  Computation.h  Node.h  Operators.h  Pendulum.cpp  Pendulum.h  PendulumStep.cpp  PendulumStep.h  Pin.h  State.cpp  State.h  Vector.h
pendui/: Button.h  ButtonData.h  CMakeLists.txt  FpsCounter.cpp  FpsCounter.h  Grid.cpp  Grid.h  Hotkey.cpp  Hotkey.h  Icon.cpp  Icon.h  MainWindow.cpp  MainWindow.h  Menu.cpp  Navigator.cpp  Navigator.h  OptionsMenu.cpp  OptionsMenu.h  Pendulum.h  PendulumProvider.cpp  PendulumProvider.h  Playback.cpp  Playback.h  Rectangle.h  Renderer.h  SdlTtf.h  Slider.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
plot/: Dot.cpp  Dot.h  MainWindow.cpp  MainWindow.h  Texture.cpp  Texture.h
posterity/: Makefile  README.md  main.cpp  plot.py
src/: Button.cpp  Button.h  ButtonData.h  Chain.h  Clickable.cpp  Clickable.h  Dot.cpp  Dot.h  DragHandler.cpp  DragHandler.h  Draggable.h  Font.h  FpsCounter.cpp  FpsCounter.h  Hotkey.cpp  Hotkey.h  Icon.cpp  Icon.h  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  Navigator.cpp  Navigator.h  OptionsMenu.cpp  OptionsMenu.h  Pendulum.h  PendulumOptions.h  PendulumProvider.cpp  PendulumProvider.h  Playback.cpp  Playback.h  Rectangle.cpp  Rectangle.h  RenderableChain.cpp  RenderableChain.h  Renderer.cpp  Renderer.h  SdlImg.h  SdlLib.h  (+12 more)
